test-suite/output/bug_20242.out
Warning: Use ';' instead of '|' to separate sort and universe binders.
[deprecated-sort-binder-syntax,deprecated-since-9.1,deprecated,default]
File "./output/bug_20242.v", line 5, characters 49-60:
The command has indeed failed with message:
Signature components for field B do not match: expected type
"foo@{Type ; A.A.u0} bug_20242.B.A" but found type
"foo@{SProp ; 0} bug_20242.B.A".
Error: The module B needs to be closed.


coqc exited with code 1
